# pico_watch

./: .gitmodules  CMakeLists.txt  README.md
include/: FreeRTOSConfig.h  gui.h  rtc.h  shell.h  util.h  watch.h
lib/display/: CMakeLists.txt  DEV_Config.c  LCD_1in14.c  disp_drv.c
lib/display/include/display/: disp_drv.h
lib/display/include/inner/: DEV_Config.h  LCD_1in14.h
lib/freertos/: CMakeLists.txt  port.c
lib/input/: CMakeLists.txt  encoder.c  input_drv.c  keypad.c  mouse.c
lib/input/include/: input_drv.h
lib/lvgl/: CMakeLists.txt  lv_conf.h
lib/network/: CMakeLists.txt  lwipopts.h  network.c
lib/network/include/: network.h
src/: freertos_hook.c  main.c  net.c  rtc.c  shell.c  stdio_net.c
src/gui/: gui.c  lv_font_kslyt_30.c  lv_font_kslyt_48.c
